# mood-matcher-playlist-generator

./: .env.example  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt
app/: Main.py  __init__.py
app/core/: __init__.py  fetcher.py  mood.py  rank.py
app/services/: __init__.py  models.py  rag.py
